# alter-sendme

./: .gitignore  Cargo.toml  PRIVACY.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: publish.yml
scripts/: release.cjs  sync-version.cjs  validate-version.cjs
sendme/: Cargo.toml
sendme/src/core/: receive.rs  send.rs
sendmer/: .gitignore  Cargo.toml
sendmer/src/: cli.rs  common.rs  lib.rs  main_reference.rs
sendmer/src/core/: common.rs  main_reference.rs  mod.rs  receive.rs  send.rs  types.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  package.json  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  version.rs
src-tauri/src/sendme/: Cargo.toml
src/components/: CustomTitleBar.tsx  Footer.tsx  LanguageSwitcher.tsx  TitleBar.tsx
src/components/receiver/: InstructionsCard.tsx  Receiver.tsx  ReceivingActiveCard.tsx  TicketInput.tsx
src/components/sender/: BrowseButtons.tsx  DragDrop.tsx  Dropzone.tsx  Sender.tsx  ShareActionCard.tsx  SharingActiveCard.tsx  TransferProgressBar.tsx  TransferSuccessScreen.tsx
src/components/ui/: alert-dialog.tsx
src/hooks/: useDragDrop.ts  useReceiver.ts  useSender.ts
src/i18n/: TranslationContext.tsx  setup.ts
src/lib/: author.ts
src/locales/ar/: common.json
src/locales/cs/: common.json
src/locales/de/: common.json
src/locales/en/: common.json
src/locales/es/: common.json
src/locales/fa/: common.json
src/locales/fr/: common.json
src/locales/hi/: common.json
src/locales/it/: common.json
src/locales/ja/: common.json
src/locales/ko/: common.json
src/locales/no/: common.json
src/locales/pl/: common.json
src/locales/pt-BR/: common.json
src/locales/ru/: common.json
src/locales/th/: common.json
src/locales/tr/: common.json
src/locales/uk/: common.json
src/locales/zh-CN/: common.json
src/locales/zh-TW/: common.json
