[workspace]
resolver = "2"
members = [
    "src-tauri",
    "sendme"
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "AGPLv3"
repository = "https://github.com/bruceblink/alter-sendme"
authors = ["likanug"]
version = "0.1.0"
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
description = "AlterSendme - Frictionless peer-to-peer file transfer desktop application with NAT hole punching"

[workspace.dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-shell = "2.0"
tauri-build = { version = "2", features = [] }
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
console = "0.16.2"
derive_more = { version = "2.0.1", features = [
    "display",
    "from_str"
] }
# I had some issues with futures-buffered 0.2.9
futures-buffered = "0.2.11"
indicatif = "0.17.7"
iroh-blobs = { version = "0.95" }
iroh = "0.93"
num_cpus = "1.16.0"
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.4.0"
data-encoding = "2.6.0"
n0-future = "0.3.1"
hex = "0.4.3"
dirs = "6.0.0"
crossterm = { version = "0.29.0", features = [
    "event-stream",
    "osc52",
]}
irpc = "0.11.0"
libc = { version = "0.2.174"}
windows-sys = { version = "0.61", features = ["Win32_System_Console"]}
duct = "1"
nix = { version = "0.30", features = ["signal", "process"] }
tempfile = "3.8.1"

