[workspace]
resolver = "2"
members = [
    "src-tauri",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "AGPLv3"
repository = "https://github.com/bruceblink/alter-sendme"
authors = ["likanug"]
version = "0.1.4"
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
description = "AlterSendme - Frictionless peer-to-peer file transfer desktop application with NAT hole punching"

[workspace.dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-shell = "2.0"
tauri-build = { version = "2", features = [] }
anyhow = "1.0.75"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.4.0"
crossterm = { version = "0.29.0", features = [
    "event-stream",
    "osc52",
]}
windows-sys = { version = "0.61", features = ["Win32_System_Console"]}
sendmer = "0.2.0"

