[workspace]
resolver = "2"
members = [
    "src-tauri",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "AGPLv3"
repository = "https://github.com/bruceblink/alter-sendme"
authors = ["likanug <likanug.g@qq.com>"]
version = "0.1.6"
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
description = "AlterSendme - Frictionless peer-to-peer file transfer desktop application with NAT hole punching"

[workspace.dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2"
tauri-build = { version = "2", features = [] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
crossterm = { version = "0.29.0", features = [
    "event-stream",
    "osc52",
]}
windows-sys = { version = "0.61", features = ["Win32_System_Console"]}
sendmer = "0.3"

