[package]
name = "sendme"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license.workspace = true
repository.workspace = true
description.workspace = true

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version .workspace = true

[lib]
name = "sendme"
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
console.workspace = true
derive_more.workspace = true
# I had some issues with futures-buffered 0.2.9
futures-buffered.workspace = true
indicatif.workspace = true
iroh-blobs.workspace = true
iroh.workspace = true
num_cpus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
data-encoding.workspace = true
n0-future.workspace = true
hex.workspace = true
dirs.workspace = true
crossterm = { workspace = true, optional = true }
irpc.workspace = true

[target.'cfg(unix)'.dependencies]
libc = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, optional = true }

[dev-dependencies]
duct .workspace = true
nix.workspace = true
rand.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[features]
clipboard = ["dep:crossterm", "dep:windows-sys", "dep:libc"]
default = ["clipboard"]

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = true
