[package]
name = "sendme"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license.workspace = true
repository.workspace = true
description.workspace = true

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version .workspace = true

[lib]
name = "sendme"
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
# I had some issues with futures-buffered 0.2.9
iroh-blobs.workspace = true
iroh.workspace = true
num_cpus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
data-encoding.workspace = true
n0-future.workspace = true
dirs.workspace = true
crossterm = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true

[features]
clipboard = ["dep:crossterm", "dep:windows-sys", "dep:libc"]
default = ["clipboard"]

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = true
