[package]
name = "alter-sendme"
version.workspace = true
description = "P2P file sharing with NAT hole punching"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "alter_sendme_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true
serde_json.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-os.workspace = true
tauri-plugin-http.workspace = true
tauri-plugin-shell.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
sendmer = {path = "../sendmer" }
serde_json.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
